--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js"
   },
-  "author": "Hitendra Mali",
+  "author": "Omkar Pasalkar",
   "license": "ISC",
   "dependencies": {
     "json-server": "^0.16.3"
